--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -2,12 +2,9 @@
 @import "./vendors/normalize";
 
 // utils - mixins, variables, placeholders
-// @import "./utils/placeholders";
 @import "./utils/variables";
 
 // base - базовые стили. подключение шрифтов, сбросы базовых стилей и первичная стилизация
-// ! подключить шрифты
-// @import "./base/fonts";
 @import "./base/common";
 @import "./base/container";
 @import "./base/keyframes";
@@ -16,6 +13,7 @@
 @import "./components/logo";
 @import "./components/btn";
 @import "./components/socials";
+@import "./components/modal";
 
 // layouts - основная разметка. Глобальные секции: сетки, секции, хедер, галереи, гриды
 @import "./layouts/section";
@@ -26,3 +24,4 @@
 @import "./layouts/team";
 @import "./layouts/clients";
 @import "./layouts/footer";
+@import "./layouts/portfolio";
