--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -66,6 +66,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 50;
     display: flex;
     flex-direction: column;
     padding: 48px 40px;
@@ -207,7 +208,7 @@
     font-size: 12px;
   }
 
-  &--accented {
+  &--highlighted {
     @media screen and (max-width: 767.98px) {
       font-size: 34px;
       line-height: 1.176;
