--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -19,7 +19,7 @@
 
   @media screen and (max-width: 767.98px) {
     &:not(:last-child) {
-      margin-bottom: 30px;
+      margin-bottom: var(--grid-item-b-gap);
     }
   }
 
