--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -156,8 +156,13 @@
     margin-bottom: 64px;
   }
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 768px) {
     display: flex;
+    flex-direction: column-reverse;
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-direction: row-reverse;
   }
 }
 
@@ -169,13 +174,13 @@
   }
 
   @media screen and (min-width: 768px) and (max-width: 1199.98px) {
-    &:not(:last-child) {
+    &:last-child {
       margin-bottom: 10px;
     }
   }
 
   @media screen and (min-width: 1200px) {
-    &:not(:last-child) {
+    &:last-child {
       margin-right: 30px;
     }
   }
