--- a/css/styles.css
+++ b/css/styles.css
@@ -285,7 +285,7 @@ summary {
 body {
   font-family: var(--main-font);
   font-size: 14px;
-  line-height: 1.71;
+  line-height: 1.714;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
   background-color: var(--primary-bg-color);
@@ -532,7 +532,6 @@ p {
   line-height: 1.304;
   letter-spacing: 0.03em;
   text-align: center;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   color: var(--title-text-color);
 }
 
@@ -616,6 +615,15 @@ p {
   display: flex;
   align-items: center;
   margin-bottom: 30px;
+  line-height: 1.714;
+}
+
+@media screen and (max-width: 1199.98px) {
+  .modal__policy {
+    font-size: 12px;
+    line-height: 1.166;
+    letter-spacing: 0.03em;
+  }
 }
 
 .modal__policy-checkbox {
@@ -1142,7 +1150,12 @@ body.modal-open {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--title-text-color);
-  text-align: center;
+}
+
+@media screen and (max-width: 767.98px) {
+  .benefits__item-title {
+    text-align: center;
+  }
 }
 
 .services-section {
@@ -1350,10 +1363,8 @@ body.modal-open {
   }
 }
 
-@media screen and (max-width: 1199.98px) {
-  .footer__logo {
-    margin-bottom: 20px;
-  }
+.footer__logo {
+  margin-bottom: 20px;
 }
 
 .address__item {
@@ -1474,11 +1485,20 @@ body.modal-open {
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .project-filters {
+    justify-content: center;
+  }
 }
 
 .project-filters__item:not(:last-child) {
   margin-right: 8px;
+}
+
+.project-filters__item:not(:nth-last-child(-n + 2)) {
   margin-bottom: 8px;
 }
 
