--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -73,7 +73,6 @@
   line-height: 1.304;
   letter-spacing: 0.03em;
   text-align: center;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   color: var(--title-text-color);
 
   @media screen and (min-width: 1200px) {
@@ -155,6 +154,13 @@
   display: flex;
   align-items: center;
   margin-bottom: 30px;
+  line-height: 1.714;
+
+  @media screen and (max-width: 1199.98px) {
+    font-size: 12px;
+    line-height: 1.166;
+    letter-spacing: 0.03em;
+  }
 }
 
 .modal__policy-checkbox {
