--- a/sass/layouts/_benefits.scss
+++ b/sass/layouts/_benefits.scss
@@ -50,5 +50,8 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--title-text-color);
-  text-align: center;
+
+  @media screen and (max-width: 767.98px) {
+    text-align: center;
+  }
 }
