--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -2,15 +2,23 @@
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
+
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+  }
 }
 
 .project-filters__item {
   &:not(:last-child) {
     margin-right: 8px;
+  }
+
+  &:not(:nth-last-child(-n + 2)) {
     margin-bottom: 8px;
   }
 }
+
 .project-filters__btn {
   border: none;
   border-radius: 4px;
@@ -25,10 +33,12 @@
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   &--active {
     color: var(--dark-bg-text-color);
     background-color: var(--accent-color);
   }
+
   &:hover,
   &:focus {
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
